loopdowhile.Poucet2.scala.code
while(!sortieTrouvee()){
  var nb=0
  do(
    avance()
    if(estSurBiscuit()){
      nb=nb+1
    }) while(!crossing())
  if(nb<=2){
      droite()
    }
  if(nb>=3){
      gauche()
    }
}
avance()